--- a/ClientSide/UI/assets/css/style.css
+++ b/ClientSide/UI/assets/css/style.css
@@ -190,6 +190,13 @@ img { max-width: 100%; }
 	
 }
 
+#message {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
 input::-webkit-calendar-picker-indicator {
   display: none;
 }
