--- a/ClientSide/UI/assets/css/style.css
+++ b/ClientSide/UI/assets/css/style.css
@@ -1,41 +1,59 @@
-
-body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    color: #888;
-    line-height: 30px;
-    text-align: center;
+ body {
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	font-weight: 300;
+	color: #888;
+	line-height: 30px;
+	text-align: center;
 }
 
-strong { font-weight: 500; }
+strong {
+	font-weight: 500;
+}
 
-a, a:hover, a:focus {
+a,
+a:hover,
+a:focus {
 	color: #de615e;
 	text-decoration: none;
-    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+	-o-transition: all .3s;
+	-moz-transition: all .3s;
+	-webkit-transition: all .3s;
+	-ms-transition: all .3s;
+	transition: all .3s;
 }
 
-h1, h2 {
+h1,
+h2 {
 	margin-top: 10px;
 	font-size: 38px;
-    font-weight: 100;
-    color: #555;
-    line-height: 50px;
+	font-weight: 100;
+	color: #555;
+	line-height: 50px;
 }
 
 h3 {
 	font-size: 22px;
-    font-weight: 300;
-    color: #555;
-    line-height: 30px;
+	font-weight: 300;
+	color: #555;
+	line-height: 30px;
 }
 
-img { max-width: 100%; }
+img {
+	max-width: 100%;
+}
 
-::-moz-selection { background: #de615e; color: #fff; text-shadow: none; }
-::selection { background: #de615e; color: #fff; text-shadow: none; }
+::-moz-selection {
+	background: #de615e;
+	color: #fff;
+	text-shadow: none;
+}
 
+::selection {
+	background: #de615e;
+	color: #fff;
+	text-shadow: none;
+}
 
 .btn-link-1 {
 	display: inline-block;
@@ -45,17 +63,34 @@ img { max-width: 100%; }
 	padding: 16px 20px 0 20px;
 	background: #de615e;
 	font-size: 16px;
-    font-weight: 300;
-    line-height: 16px;
-    color: #fff;
+	font-weight: 300;
+	line-height: 16px;
+	color: #fff;
 	text-align: center;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
 }
-.btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active { outline: 0; opacity: 0.6; color: #fff; }
 
-.btn-link-1.btn-link-1-facebook { background: #4862a3; }
-.btn-link-1.btn-link-1-twitter { background: #55acee; }
-.btn-link-1.btn-link-1-google-plus { background: #dd4b39; }
+.btn-link-1:hover,
+.btn-link-1:focus,
+.btn-link-1:active {
+	outline: 0;
+	opacity: 0.6;
+	color: #fff;
+}
+
+.btn-link-1.btn-link-1-facebook {
+	background: #4862a3;
+}
+
+.btn-link-1.btn-link-1-twitter {
+	background: #55acee;
+}
+
+.btn-link-1.btn-link-1-google-plus {
+	background: #dd4b39;
+}
 
 .btn-link-1 i {
 	padding-right: 5px;
@@ -72,38 +107,55 @@ img { max-width: 100%; }
 	background: rgba(0, 0, 0, 0.3);
 	border: 1px solid #fff;
 	font-size: 16px;
-    font-weight: 300;
-    line-height: 16px;
-    color: #fff;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
+	font-weight: 300;
+	line-height: 16px;
+	color: #fff;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
 }
-.btn-link-2:hover, .btn-link-2:focus, 
-.btn-link-2:active, .btn-link-2:active:focus { outline: 0; opacity: 0.6; background: rgba(0, 0, 0, 0.3); color: #fff; }
+
+.btn-link-2:hover,
+.btn-link-2:focus,
+.btn-link-2:active,
+.btn-link-2:active:focus {
+	outline: 0;
+	opacity: 0.6;
+	background: rgba(0, 0, 0, 0.3);
+	color: #fff;
+}
 
 
 /***** Top content *****/
 
 .inner-bg {
-    padding: 100px 0 170px 0;
+	padding: 100px 0 170px 0;
 }
 
 .top-content .text {
 	color: #fff;
 }
 
-.top-content .text h1 { color: #fff; }
+.top-content .text h1 {
+	color: #fff;
+}
 
 .top-content .description {
 	margin: 20px 0 10px 0;
 }
 
-.top-content .description p { opacity: 0.8; }
+.top-content .description p {
+	opacity: 0.8;
+}
 
 .top-content .description a {
 	color: #fff;
 }
-.top-content .description a:hover, 
-.top-content .description a:focus { border-bottom: 1px dotted #fff; }
+
+.top-content .description a:hover,
+.top-content .description a:focus {
+	border-bottom: 1px dotted #fff;
+}
 
 .form-box {
 	margin-top: 35px;
@@ -114,7 +166,9 @@ img { max-width: 100%; }
 	padding: 0 25px 15px 25px;
 	background: #444;
 	background: rgba(0, 0, 0, 0.35);
-	-moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
+	-moz-border-radius: 4px 4px 0 0;
+	-webkit-border-radius: 4px 4px 0 0;
+	border-radius: 4px 4px 0 0;
 	text-align: left;
 }
 
@@ -127,13 +181,28 @@ img { max-width: 100%; }
 .form-top-left1 {
 	float: left;
 	width: 100%;
-	padding-top: 25px;}
+	padding-top: 25px;
+}
 
-.form-top-left1 h3 { margin-top: 0; color: #fff; }
-.form-top-left1 p { opacity: 0.8; color: #fff; }
+.form-top-left1 h3 {
+	margin-top: 0;
+	color: #fff;
+}
 
-.form-top-left h3 { margin-top: 0; color: #fff; }
-.form-top-left p { opacity: 0.8; color: #fff; }
+.form-top-left1 p {
+	opacity: 0.8;
+	color: #fff;
+}
+
+.form-top-left h3 {
+	margin-top: 0;
+	color: #fff;
+}
+
+.form-top-left p {
+	opacity: 0.8;
+	color: #fff;
+}
 
 .form-top-right {
 	float: left;
@@ -150,7 +219,9 @@ img { max-width: 100%; }
 	padding: 25px 25px 30px 25px;
 	background: #444;
 	background: rgba(0, 0, 0, 0.3);
-	-moz-border-radius: 0 0 4px 4px; -webkit-border-radius: 0 0 4px 4px; border-radius: 0 0 4px 4px;
+	-moz-border-radius: 0 0 4px 4px;
+	-webkit-border-radius: 0 0 4px 4px;
+	border-radius: 0 0 4px 4px;
 	text-align: left;
 }
 
@@ -179,27 +250,28 @@ img { max-width: 100%; }
 }
 
 #btn-refresh {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-	
+	background-color: #4CAF50;
+	/* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
 }
 
 #message {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
 }
 
 input::-webkit-calendar-picker-indicator {
-  display: none;
+	display: none;
 }
+
 
 /***** Media queries *****/
 
@@ -208,14 +280,17 @@ input::-webkit-calendar-picker-indicator {
 @media (min-width: 768px) and (max-width: 991px) {}
 
 @media (max-width: 767px) {
-	
-	.inner-bg { padding: 60px 0 110px 0; }
-
+	.inner-bg {
+		padding: 60px 0 110px 0;
+	}
+}
+.fa-cog {
+  color: black;
 }
 
 @media (max-width: 415px) {
-	
-	h1, h2 { font-size: 32px; }
-
+	h1,
+	h2 {
+		font-size: 32px;
+	}
 }
-
