--- a/ClientSide/UI/assets/css/style.css
+++ b/ClientSide/UI/assets/css/style.css
@@ -268,6 +268,13 @@ img {
 	width: 100%;
 }
 
+#error {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+}
+
 input::-webkit-calendar-picker-indicator {
 	display: none;
 }
